src/antlr4/java/iot/restful/parser/FilterExprParser.java
// Generated from I:\frc2011_java\camus\misc\iot_platform/src/main/resources/FilterExpr.g4 by ANTLR 4.5
package iot.restful.parser;

import java.time.*;
import java.util.stream.*;

import iot.restful.*;
import iot.restful.optor.*;
import iot.restful.optor.func.*;

import com.vividsolutions.jts.geom.*;
import com.vividsolutions.jts.io.ParseException;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FilterExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, EVERY=8, EXISTS=9, 
		ADD=10, SUB=11, MUL=12, DIV=13, MOD=14, EQ=15, NE=16, GT=17, GE=18, LT=19, 
		LE=20, AND=21, OR=22, NOT=23, SUBSTRING_OF=24, ENDSWITH=25, STARTSWITH=26, 
		LENGTH=27, INDEX_OF=28, SUBSTRING=29, TOLOWER=30, TOUPPER=31, TRIM=32, 
		CONCAT=33, NOW=34, YEAR=35, MONTH=36, DAY=37, HOUR=38, MINUTE=39, SECOND=40, 
		FRACTIONALSECONDS=41, DATE=42, TIME=43, TOTALOFFSETMINUTES=44, MINDATETIME=45, 
		MAXDATETIME=46, ROUND=47, FLOOR=48, CEILING=49, CAST=50, ISOF=51, GEO_DISTANCE=52, 
		GEO_LENGTH=53, GEO_INTERSECTS=54, ST_EQUALS=55, ST_DISJOINT=56, ST_TOUCHES=57, 
		ST_WITHIN=58, ST_OVERLAPS=59, ST_CROSSES=60, ST_INTERSECTS=61, ST_CONTAINS=62, 
		ST_RELATE=63, ID=64, INT=65, FLOAT=66, STRING=67, LINE_COMMENT=68, COMMENT=69, 
		WS=70;
	public static final int
		RULE_expr = 0, RULE_relExpr = 1, RULE_boolStreamAggrExpr = 2, RULE_boolStreamExpr = 3, 
		RULE_streamExpr = 4, RULE_idPath = 5, RULE_literal = 6, RULE_geoLiteral = 7, 
		RULE_wktGeometry = 8, RULE_coordSeqList = 9, RULE_coordSeq = 10, RULE_coord = 11, 
		RULE_coordSeg = 12, RULE_numeric = 13, RULE_intExpr = 14, RULE_stringExpr = 15;
	public static final String[] ruleNames = {
		"expr", "relExpr", "boolStreamAggrExpr", "boolStreamExpr", "streamExpr", 
		"idPath", "literal", "geoLiteral", "wktGeometry", "coordSeqList", "coordSeq", 
		"coord", "coordSeg", "numeric", "intExpr", "stringExpr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "','", "'/'", "'POINT'", "'LINESTRING'", "'POLYGON'", 
		"'every'", "'exists'", "'add'", "'sub'", "'mul'", "'div'", "'mod'", "'eq'", 
		"'ne'", "'gt'", "'ge'", "'lt'", "'le'", "'and'", "'or'", "'not'", "'substringof'", 
		"'endswith'", "'startswith'", "'length'", "'indexof'", "'substring'", 
		"'tolower'", "'toupper'", "'trim'", "'concat'", "'now'", "'year'", "'month'", 
		"'day'", "'hour'", "'minute'", "'second'", "'fractionalseconds'", "'date'", 
		"'time'", "'totaloffsetiminutes'", "'mindatetime'", "'maxdatetime'", "'round'", 
		"'floor'", "'ceiling'", "'cast'", "'isof'", "'geo.distance'", "'geo.length'", 
		"'geo.intersects'", "'st_equals'", "'st_disjoint'", "'st_touches'", "'st_within'", 
		"'st_overlaps'", "'st_crosses'", "'st_intersects'", "'st_contains'", "'st_relate'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, "EVERY", "EXISTS", "ADD", 
		"SUB", "MUL", "DIV", "MOD", "EQ", "NE", "GT", "GE", "LT", "LE", "AND", 
		"OR", "NOT", "SUBSTRING_OF", "ENDSWITH", "STARTSWITH", "LENGTH", "INDEX_OF", 
		"SUBSTRING", "TOLOWER", "TOUPPER", "TRIM", "CONCAT", "NOW", "YEAR", "MONTH", 
		"DAY", "HOUR", "MINUTE", "SECOND", "FRACTIONALSECONDS", "DATE", "TIME", 
		"TOTALOFFSETMINUTES", "MINDATETIME", "MAXDATETIME", "ROUND", "FLOOR", 
		"CEILING", "CAST", "ISOF", "GEO_DISTANCE", "GEO_LENGTH", "GEO_INTERSECTS", 
		"ST_EQUALS", "ST_DISJOINT", "ST_TOUCHES", "ST_WITHIN", "ST_OVERLAPS", 
		"ST_CROSSES", "ST_INTERSECTS", "ST_CONTAINS", "ST_RELATE", "ID", "INT", 
		"FLOAT", "STRING", "LINE_COMMENT", "COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FilterExpr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		private GeometryFactory m_geomFactory;
		
		public FilterExprParser(TokenStream input, GeometryFactory geomFact) {
			this(input);
			
			m_geomFactory = geomFact;
		}

	public FilterExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExprContext extends ParserRuleContext {
		public List<String> result;
		public RelExprContext relExpr() {
			return getRuleContext(RelExprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			relExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelExprContext extends ParserRuleContext {
		public BooleanEvaluator evaltor;
		public BoolStreamAggrExprContext b1;
		public BoolStreamAggrExprContext b2;
		public TerminalNode NOT() { return getToken(FilterExprParser.NOT, 0); }
		public List<BoolStreamAggrExprContext> boolStreamAggrExpr() {
			return getRuleContexts(BoolStreamAggrExprContext.class);
		}
		public BoolStreamAggrExprContext boolStreamAggrExpr(int i) {
			return getRuleContext(BoolStreamAggrExprContext.class,i);
		}
		public TerminalNode AND() { return getToken(FilterExprParser.AND, 0); }
		public TerminalNode OR() { return getToken(FilterExprParser.OR, 0); }
		public RelExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relExpr; }
	}

	public final RelExprContext relExpr() throws RecognitionException {
		RelExprContext _localctx = new RelExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_relExpr);
		try {
			setState(51);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				match(NOT);
				setState(35);
				((RelExprContext)_localctx).b1 = boolStreamAggrExpr();
				 ((RelExprContext)_localctx).evaltor =  new Not(((RelExprContext)_localctx).b1.evaltor); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				((RelExprContext)_localctx).b1 = boolStreamAggrExpr();
				setState(39);
				match(AND);
				setState(40);
				((RelExprContext)_localctx).b2 = boolStreamAggrExpr();
				 ((RelExprContext)_localctx).evaltor =  new And(((RelExprContext)_localctx).b1.evaltor, ((RelExprContext)_localctx).b2.evaltor); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(43);
				((RelExprContext)_localctx).b1 = boolStreamAggrExpr();
				setState(44);
				match(OR);
				setState(45);
				((RelExprContext)_localctx).b2 = boolStreamAggrExpr();
				 ((RelExprContext)_localctx).evaltor =  new Or(((RelExprContext)_localctx).b1.evaltor, ((RelExprContext)_localctx).b2.evaltor); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(48);
				((RelExprContext)_localctx).b1 = boolStreamAggrExpr();
				 ((RelExprContext)_localctx).evaltor =  ((RelExprContext)_localctx).b1.evaltor; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolStreamAggrExprContext extends ParserRuleContext {
		public BooleanEvaluator evaltor;
		public BoolStreamExprContext boolStreamExpr;
		public BoolStreamExprContext boolStreamExpr() {
			return getRuleContext(BoolStreamExprContext.class,0);
		}
		public TerminalNode EXISTS() { return getToken(FilterExprParser.EXISTS, 0); }
		public TerminalNode EVERY() { return getToken(FilterExprParser.EVERY, 0); }
		public BoolStreamAggrExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolStreamAggrExpr; }
	}

	public final BoolStreamAggrExprContext boolStreamAggrExpr() throws RecognitionException {
		BoolStreamAggrExprContext _localctx = new BoolStreamAggrExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_boolStreamAggrExpr);
		int _la;
		try {
			setState(63);
			switch (_input.LA(1)) {
			case T__0:
			case EXISTS:
			case LENGTH:
			case INDEX_OF:
			case SUBSTRING:
			case TOLOWER:
			case TOUPPER:
			case TRIM:
			case CONCAT:
			case YEAR:
			case MONTH:
			case DAY:
			case HOUR:
			case MINUTE:
			case SECOND:
			case DATE:
			case TIME:
			case ROUND:
			case FLOOR:
			case CEILING:
			case GEO_DISTANCE:
			case GEO_LENGTH:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				_la = _input.LA(1);
				if (_la==EXISTS) {
					{
					setState(53);
					match(EXISTS);
					}
				}

				setState(56);
				((BoolStreamAggrExprContext)_localctx).boolStreamExpr = boolStreamExpr();
				 ((BoolStreamAggrExprContext)_localctx).evaltor =  new Exists(((BoolStreamAggrExprContext)_localctx).boolStreamExpr.op); 
				}
				break;
			case EVERY:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				match(EVERY);
				setState(60);
				((BoolStreamAggrExprContext)_localctx).boolStreamExpr = boolStreamExpr();
				 ((BoolStreamAggrExprContext)_localctx).evaltor =  new Every(((BoolStreamAggrExprContext)_localctx).boolStreamExpr.op); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolStreamExprContext extends ParserRuleContext {
		public BooleanStreamOperator op;
		public StreamExprContext source;
		public Token cmp;
		public LiteralContext literal;
		public Token func;
		public GeoLiteralContext geoLiteral;
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public StreamExprContext streamExpr() {
			return getRuleContext(StreamExprContext.class,0);
		}
		public TerminalNode EQ() { return getToken(FilterExprParser.EQ, 0); }
		public TerminalNode NE() { return getToken(FilterExprParser.NE, 0); }
		public TerminalNode GT() { return getToken(FilterExprParser.GT, 0); }
		public TerminalNode GE() { return getToken(FilterExprParser.GE, 0); }
		public TerminalNode LT() { return getToken(FilterExprParser.LT, 0); }
		public TerminalNode LE() { return getToken(FilterExprParser.LE, 0); }
		public GeoLiteralContext geoLiteral() {
			return getRuleContext(GeoLiteralContext.class,0);
		}
		public TerminalNode GEO_INTERSECTS() { return getToken(FilterExprParser.GEO_INTERSECTS, 0); }
		public TerminalNode ST_EQUALS() { return getToken(FilterExprParser.ST_EQUALS, 0); }
		public TerminalNode ST_DISJOINT() { return getToken(FilterExprParser.ST_DISJOINT, 0); }
		public TerminalNode ST_TOUCHES() { return getToken(FilterExprParser.ST_TOUCHES, 0); }
		public TerminalNode ST_WITHIN() { return getToken(FilterExprParser.ST_WITHIN, 0); }
		public TerminalNode ST_OVERLAPS() { return getToken(FilterExprParser.ST_OVERLAPS, 0); }
		public TerminalNode ST_CROSSES() { return getToken(FilterExprParser.ST_CROSSES, 0); }
		public TerminalNode ST_INTERSECTS() { return getToken(FilterExprParser.ST_INTERSECTS, 0); }
		public TerminalNode ST_CONTAINS() { return getToken(FilterExprParser.ST_CONTAINS, 0); }
		public BoolStreamExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolStreamExpr; }
	}

	public final BoolStreamExprContext boolStreamExpr() throws RecognitionException {
		BoolStreamExprContext _localctx = new BoolStreamExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_boolStreamExpr);
		int _la;
		try {
			setState(77);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				((BoolStreamExprContext)_localctx).source = streamExpr(0);
				setState(66);
				((BoolStreamExprContext)_localctx).cmp = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << NE) | (1L << GT) | (1L << GE) | (1L << LT) | (1L << LE))) != 0)) ) {
					((BoolStreamExprContext)_localctx).cmp = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(67);
				((BoolStreamExprContext)_localctx).literal = literal();
				 ((BoolStreamExprContext)_localctx).op =  new Compare(((BoolStreamExprContext)_localctx).source.op, ((BoolStreamExprContext)_localctx).cmp.getType(), ((BoolStreamExprContext)_localctx).literal.value); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				((BoolStreamExprContext)_localctx).source = streamExpr(0);
				setState(71);
				((BoolStreamExprContext)_localctx).func = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GEO_INTERSECTS) | (1L << ST_EQUALS) | (1L << ST_DISJOINT) | (1L << ST_TOUCHES) | (1L << ST_WITHIN) | (1L << ST_OVERLAPS) | (1L << ST_CROSSES) | (1L << ST_INTERSECTS) | (1L << ST_CONTAINS))) != 0)) ) {
					((BoolStreamExprContext)_localctx).func = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(72);
				match(T__0);
				setState(73);
				((BoolStreamExprContext)_localctx).geoLiteral = geoLiteral();
				setState(74);
				match(T__1);
				 ((BoolStreamExprContext)_localctx).op =  new StBooleanFunction(((BoolStreamExprContext)_localctx).source.op, ((BoolStreamExprContext)_localctx).geoLiteral.value, ((BoolStreamExprContext)_localctx).func.getType()); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StreamExprContext extends ParserRuleContext {
		public ValueStreamOperator op;
		public StreamExprContext source;
		public IdPathContext idPath;
		public StringExprContext lit;
		public IntExprContext intExpr;
		public StreamExprContext left;
		public StringExprContext right;
		public Token code;
		public NumericContext numeric;
		public Token INT;
		public IdPathContext idPath() {
			return getRuleContext(IdPathContext.class,0);
		}
		public TerminalNode LENGTH() { return getToken(FilterExprParser.LENGTH, 0); }
		public StreamExprContext streamExpr() {
			return getRuleContext(StreamExprContext.class,0);
		}
		public TerminalNode INDEX_OF() { return getToken(FilterExprParser.INDEX_OF, 0); }
		public StringExprContext stringExpr() {
			return getRuleContext(StringExprContext.class,0);
		}
		public TerminalNode SUBSTRING() { return getToken(FilterExprParser.SUBSTRING, 0); }
		public IntExprContext intExpr() {
			return getRuleContext(IntExprContext.class,0);
		}
		public TerminalNode TOLOWER() { return getToken(FilterExprParser.TOLOWER, 0); }
		public TerminalNode TOUPPER() { return getToken(FilterExprParser.TOUPPER, 0); }
		public TerminalNode TRIM() { return getToken(FilterExprParser.TRIM, 0); }
		public TerminalNode CONCAT() { return getToken(FilterExprParser.CONCAT, 0); }
		public TerminalNode GEO_DISTANCE() { return getToken(FilterExprParser.GEO_DISTANCE, 0); }
		public TerminalNode GEO_LENGTH() { return getToken(FilterExprParser.GEO_LENGTH, 0); }
		public TerminalNode YEAR() { return getToken(FilterExprParser.YEAR, 0); }
		public TerminalNode MONTH() { return getToken(FilterExprParser.MONTH, 0); }
		public TerminalNode DAY() { return getToken(FilterExprParser.DAY, 0); }
		public TerminalNode HOUR() { return getToken(FilterExprParser.HOUR, 0); }
		public TerminalNode MINUTE() { return getToken(FilterExprParser.MINUTE, 0); }
		public TerminalNode SECOND() { return getToken(FilterExprParser.SECOND, 0); }
		public TerminalNode DATE() { return getToken(FilterExprParser.DATE, 0); }
		public TerminalNode TIME() { return getToken(FilterExprParser.TIME, 0); }
		public TerminalNode ROUND() { return getToken(FilterExprParser.ROUND, 0); }
		public TerminalNode FLOOR() { return getToken(FilterExprParser.FLOOR, 0); }
		public TerminalNode CEILING() { return getToken(FilterExprParser.CEILING, 0); }
		public TerminalNode MUL() { return getToken(FilterExprParser.MUL, 0); }
		public NumericContext numeric() {
			return getRuleContext(NumericContext.class,0);
		}
		public TerminalNode DIV() { return getToken(FilterExprParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(FilterExprParser.MOD, 0); }
		public TerminalNode INT() { return getToken(FilterExprParser.INT, 0); }
		public TerminalNode ADD() { return getToken(FilterExprParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(FilterExprParser.SUB, 0); }
		public StreamExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_streamExpr; }
	}

	public final StreamExprContext streamExpr() throws RecognitionException {
		return streamExpr(0);
	}

	private StreamExprContext streamExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StreamExprContext _localctx = new StreamExprContext(_ctx, _parentState);
		StreamExprContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_streamExpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(80);
				((StreamExprContext)_localctx).idPath = idPath();
				 ((StreamExprContext)_localctx).op =  new Navigate(((StreamExprContext)_localctx).idPath.path); 
				}
				break;
			case 2:
				{
				setState(83);
				match(LENGTH);
				setState(84);
				match(T__0);
				setState(85);
				((StreamExprContext)_localctx).source = streamExpr(0);
				setState(86);
				match(T__1);
				 ((StreamExprContext)_localctx).op =  new Transform(((StreamExprContext)_localctx).source.op, new Length()); 
				}
				break;
			case 3:
				{
				setState(89);
				match(INDEX_OF);
				setState(90);
				match(T__0);
				setState(91);
				((StreamExprContext)_localctx).source = streamExpr(0);
				setState(92);
				match(T__2);
				setState(93);
				((StreamExprContext)_localctx).lit = stringExpr();
				setState(94);
				match(T__1);
				 ((StreamExprContext)_localctx).op =  new Transform(((StreamExprContext)_localctx).source.op, new IndexOf(((StreamExprContext)_localctx).lit.value, false)); 
				}
				break;
			case 4:
				{
				setState(97);
				match(INDEX_OF);
				setState(98);
				match(T__0);
				setState(99);
				((StreamExprContext)_localctx).lit = stringExpr();
				setState(100);
				match(T__2);
				setState(101);
				((StreamExprContext)_localctx).source = streamExpr(0);
				setState(102);
				match(T__1);
				 ((StreamExprContext)_localctx).op =  new Transform(((StreamExprContext)_localctx).source.op, new IndexOf(((StreamExprContext)_localctx).lit.value, true)); 
				}
				break;
			case 5:
				{
				setState(105);
				match(SUBSTRING);
				setState(106);
				match(T__0);
				setState(107);
				((StreamExprContext)_localctx).source = streamExpr(0);
				setState(108);
				match(T__2);
				setState(109);
				((StreamExprContext)_localctx).intExpr = intExpr();
				setState(110);
				match(T__1);
				 ((StreamExprContext)_localctx).op =  new Transform(((StreamExprContext)_localctx).source.op, new SubString(((StreamExprContext)_localctx).intExpr.value)); 
				}
				break;
			case 6:
				{
				setState(113);
				match(TOLOWER);
				setState(114);
				match(T__0);
				setState(115);
				((StreamExprContext)_localctx).source = streamExpr(0);
				setState(116);
				match(T__1);
				 ((StreamExprContext)_localctx).op =  new Transform(((StreamExprContext)_localctx).source.op, new ToLower()); 
				}
				break;
			case 7:
				{
				setState(119);
				match(TOUPPER);
				setState(120);
				match(T__0);
				setState(121);
				((StreamExprContext)_localctx).source = streamExpr(0);
				setState(122);
				match(T__1);
				 ((StreamExprContext)_localctx).op =  new Transform(((StreamExprContext)_localctx).source.op, new ToUpper()); 
				}
				break;
			case 8:
				{
				setState(125);
				match(TRIM);
				setState(126);
				match(T__0);
				setState(127);
				((StreamExprContext)_localctx).source = streamExpr(0);
				setState(128);
				match(T__1);
				 ((StreamExprContext)_localctx).op =  new Transform(((StreamExprContext)_localctx).source.op, new Trim()); 
				}
				break;
			case 9:
				{
				setState(131);
				match(CONCAT);
				setState(132);
				match(T__0);
				setState(133);
				((StreamExprContext)_localctx).source = streamExpr(0);
				setState(134);
				match(T__2);
				setState(135);
